--- a/plugins/cordova-acoustic-mobile-push-plugin-calendar/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-calendar/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-calendar" version="3.9.52">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-calendar" version="3.9.53">
   <name>Calendar Action for Acoustic MCE Cordova Plugin</name>
   <author>Acoustic MCE</author>
   <description>Calendar Action for Acoustic MCE Push Services</description>
@@ -20,8 +20,8 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     <clobbers target="MCECalendarPlugin" />
   </js-module>
   <!-- Library settings -->
-  <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
-  <preference name="POD_VERSION" default="3.9.52" />
+  <preference name="POD_NAME" default="AcousticMobilePushDebug" />
+  <preference name="POD_VERSION" default="3.9.53" />
 
   <platform name="ios">
     <config-file target="config.xml" parent="/*">
@@ -46,12 +46,11 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     </podspec>
   </platform>
   <platform name="android">
+    <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
     <config-file target="config.xml" parent="/*">
       <feature name="MCECalendarPlugin" >
         <param name="android-package" value="co.acoustic.mobile.push.plugin.calendar.MCECalendarPlugin"/>
       </feature>
     </config-file>
-    <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
-    <source-file src="src/android/assets/mce/plugins/calendar.json" target-dir="assets/mce/plugins" framework="false" />
   </platform>
 </plugin>
