--- a/plugins/cordova-acoustic-mobile-push-plugin-displayweb/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-displayweb/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-displayweb"
-version="3.9.52">
+version="3.9.53">
     <name>Display Web Action for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Display Web Action for Acoustic MCE Push Services</description>
@@ -22,8 +22,8 @@ version="3.9.52">
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
-    <preference name="POD_VERSION" default="3.9.52" />
+    <preference name="POD_NAME" default="AcousticMobilePushDebug" />
+    <preference name="POD_VERSION" default="3.9.53" />
 
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -51,7 +51,6 @@ version="3.9.52">
         
         <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
         
-        <source-file src="src/android/assets/mce/plugins/displayweb.json" target-dir="assets/mce/plugins" framework="false" />
         <source-file src="src/android/res/drawable-hdpi/ic_action_back.png" target-dir="res/drawable-hdpi" framework="false" />
         <source-file src="src/android/res/drawable-hdpi/ic_action_forward.png" target-dir="res/drawable-hdpi" framework="false" />
         <source-file src="src/android/res/drawable-mdpi/ic_action_back.png" target-dir="res/drawable-mdpi" framework="false" />
