--- a/plugins/cordova-acoustic-mobile-push-plugin-fcm/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-fcm/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-fcm" version="3.9.52">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-fcm" version="3.9.53">
     <name>Acoustic MCE Cordova Plugin for FCM</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -21,10 +21,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     </js-module>
 
     <platform name="android">
-        <framework src="com.google.firebase:firebase-core:+" />
-        <framework src="com.google.firebase:firebase-messaging:+" />
-        <framework src="com.google.firebase:firebase-iid:+" />
-
+        <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
         <framework src="src/android/FCMPlugin.gradle" custom="true" type="gradleReference"/>
 
         <hook src="scripts/after_prepare.js" type="after_prepare" />
