--- a/plugins/cordova-acoustic-mobile-push-plugin-inbox/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-inbox/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-inbox"
-version="3.9.52">
+version="3.9.53">
     <name>Inbox Action for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Inbox Action for Acoustic MCE Push Services</description>
@@ -42,8 +42,8 @@ version="3.9.52">
     <hook type="after_plugin_install" src="scripts/after_plugin_install.js" />
 
     <!-- Library settings -->
-    <preference name="POD_NAME" default="AcousticMobilePushNotificationDebug" />
-    <preference name="POD_VERSION" default="3.9.52" />
+    <preference name="POD_NAME" default="AcousticMobilePushDebug" />
+    <preference name="POD_VERSION" default="3.9.53" />
 
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -73,7 +73,5 @@ version="3.9.52">
         <framework src="src/android/build-extras.gradle" custom="true" type="gradleReference" />
         <source-file src="src/android/src/co/acoustic/mobile/push/plugin/cordova/inbox" target-dir="java/co/acoustic/mobile/push/plugin/cordova" />
         <source-file src="src/android/src/co/acoustic/mobile/push/sdk/js/inbox" target-dir="java/co/acoustic/mobile/push/sdk/js" />
-        <source-file src="src/android/assets/mce/plugins/inbox.json" target-dir="assets/mce/plugins" framework="false" />
-
     </platform>
 </plugin>
