--- a/plugins/cordova-acoustic-mobile-push-plugin-location/src/android/build-extras.gradle
+++ b/plugins/cordova-acoustic-mobile-push-plugin-location/src/android/build-extras.gradle
@@ -4,4 +4,5 @@ repositories{
 
 dependencies {
    implementation('androidx.appcompat:appcompat:1.6.0')
+   implementation "com.google.android.gms:play-services-location:21.0.1"
 }
