--- a/plugins/cordova-acoustic-mobile-push-plugin-inbox/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-inbox/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-inbox"
-version="3.9.57">
+version="3.9.58">
     <name>Inbox Action for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Inbox Action for Acoustic MCE Push Services</description>
@@ -42,7 +42,7 @@ version="3.9.57">
     <hook type="after_plugin_install" src="scripts/after_plugin_install.js" />
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.57" />
+    <preference name="POD_VERSION" default="3.9.58" />
 
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -54,7 +54,7 @@ version="3.9.57">
         <source-file src="src/ios/MCEInboxPlugin.m" />
         <podspec>
             <config>
-                <source url="https://github.com/CocoaPods/Specs.git"/>
+                <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
                 <pod name="$POD_NAME" spec="$POD_VERSION" />
