--- a/plugins/cordova-acoustic-mobile-push-plugin-inapp/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-inapp/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-inapp" version="3.9.58">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-inapp" version="3.9.59">
     <name>InApp Action for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>InApp Action for Acoustic MCE Push Services</description>
@@ -41,7 +41,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.58" />
+    <preference name="POD_VERSION" default="3.9.59" />
   
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -56,7 +56,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="$POD_NAME" spec="$POD_VERSION" />
+                <pod name="AcousticMobilePushDebug" spec="$POD_VERSION" />
             </pods>
         </podspec>
     </platform>
