--- a/plugins/cordova-acoustic-mobile-push-plugin-action-menu/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-action-menu/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-action-menu"
-    version="3.9.60">
+    version="3.9.61">
     <name>Action Menu for Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Display Action Menu for Acoustic MCE Push Services</description>
@@ -22,7 +22,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.60" />
+    <preference name="POD_VERSION" default="3.9.61" />
 
     <platform name="ios">
         <config-file target="config.xml" parent="/*">
@@ -37,7 +37,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushDebug" spec="$POD_VERSION" />
+                <pod name="AcousticMobilePushDebug"  />
             </pods>
         </podspec>
     </platform>
