--- a/plugins/cordova-acoustic-mobile-push-plugin-geofence/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push-plugin-geofence/plugin.xml
@@ -8,7 +8,7 @@ industrial property rights of Acoustic, L.P. except as may be provided in an agr
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push-plugin-geofence"
-version="3.9.60">
+version="3.9.61">
     <name>Acoustic MCE Geofence Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -22,7 +22,7 @@ version="3.9.60">
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.60" />
+    <preference name="POD_VERSION" default="3.9.61" />
     
     <platform name="ios">
         <header-file src="src/ios/MCEGeofencePlugin.h" />
@@ -38,7 +38,7 @@ version="3.9.60">
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="AcousticMobilePushDebug" spec="$POD_VERSION" />
+                <pod name="AcousticMobilePushDebug"  />
             </pods>
         </podspec>
     </platform>
