--- a/plugins/cordova-acoustic-mobile-push/plugin.xml
+++ b/plugins/cordova-acoustic-mobile-push/plugin.xml
@@ -7,7 +7,7 @@ Acoustic, L.P. and/or other developers. No license is granted under any intellec
 industrial property rights of Acoustic, L.P. except as may be provided in an agreement with 
 Acoustic, L.P. Any unauthorized copying or distribution of content from this file is prohibited.
 -->
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push" version="3.9.70">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" id="cordova-acoustic-mobile-push" version="3.9.71">
     <name>Acoustic MCE Cordova Plugin</name>
     <author>Acoustic MCE</author>
     <description>Allows Cordova applications to integrate with Acoustic MCE Push Services</description>
@@ -21,7 +21,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
     </js-module>
 
     <!-- Library settings -->
-    <preference name="POD_VERSION" default="3.9.70" />
+    <preference name="POD_VERSION" default="3.9.71" />
 
     <preference name="CHANNEL_NAME" default="MCE SDK Notification Channel" />
     <preference name="CHANNEL_DESCRIPTION" default="This is the notification channel for the MCE SDK sample application"/>
@@ -121,6 +121,8 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
             <meta-data android:name="channelId" android:value="$CHANNEL_ID" />
 
             <!-- MCE properties -->
+            <meta-data android:name="messagingService" android:value="fcm" />
+            <meta-data android:name="mceSenderId" android:value="" />
             <meta-data android:name="autoInitialize" android:value="$AUTO_INITIALIZE" />
             <meta-data android:name="autoReinitialize" android:value="$AUTO_REINITIALIZE" />
             <meta-data android:name="mceAppKey" android:value="@string/appkey" />
@@ -178,6 +180,12 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
             <!-- MdeJobService is used for launching a job while the app is in the foreground. This is only used in Android O and above -->
             <service android:name="co.acoustic.mobile.push.sdk.job.MceJobService" android:permission="android.permission.BIND_JOB_SERVICE"/>
 
+            <!-- FCM Messages -->
+            <service android:name="co.acoustic.mobile.push.sdk.messaging.fcm.FcmMessagingService">
+                <intent-filter>
+                    <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                </intent-filter>
+            </service>
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
@@ -192,6 +200,7 @@ Acoustic, L.P. Any unauthorized copying or distribution of content from this fil
         </config-file>
         <config-file target="res/values/strings.xml" parent="/*">
             <string name="appkey">$ANDROID_APPKEY</string>
+            <string name="senderid"></string>
         </config-file>
         <config-file target="res/xml/config.xml" parent="/widget">
             <feature name="MCEPlugin">
