--- a/applications/samples/Sample/CampaignConfig.json
+++ b/applications/samples/Sample/CampaignConfig.json
@@ -1,9 +1,9 @@
 {
   "Please note": "<true/false>, for native SDK build.  True for release build, false for beta build",
   "useRelease": false,
-  "iOS Version": "<x.xx.xxx>, native iOS SDK version",
+  "iOS Version": "<x.xx.xxx>, native iOS SDK version, empty value will retrieve lastest version",
   "iOSVersion": "",
-  "Android Version": "<x.xx.xxx>, native Android SDK version",
+  "Android Version": "<x.xx.xxx>, native Android SDK version, empty value will retrieve lastest version",
   "androidVersion": "",
 
   "plugins": {
@@ -27,17 +27,17 @@
     "cordova-acoustic-mobile-push-plugin-snooze-beta": true
   },
 
-  "customAction": "openInboxMessage sendEmail",
+  "customAction": "",
   "mceCanSyncOverride": true,
 
   "iOS": {
     "Please note: if you are using a Swift based Application Delegate you must include the product name and class name in AppDelegateClass, for example": "SwiftSample.AppDelegate",
     "appDelegateClass": "AppDelegate",
     "Please note": "you will need to update your baseUrl to the one supplied to you",
-    "baseUrl": "https://mobile-sdk-lib-us-0.brilliantcollector.com",
+    "baseUrl": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
     "appKey": {
-      "dev": "apB9YG5Umw",
-      "prod": "apB9YG5Umw"
+      "dev": "INSERT YOUR DEV APPKEY HERE",
+      "prod": "INSERT YOUR PROD APPKEY HERE"
     },
     "Please note, this option can be used to assign a device a different UserId on reinstallation, the default is to use the same UserId on reinstallation if possible (false). If you want a different UserId on reinstallation set invalidateExistingUser to": true,
     "invalidateExistingUser": false,
@@ -67,12 +67,12 @@
               "syncRadius": 100000,
               
               "Specify how long to wait before syncing again on significant location change in seconds, default 5 minutes": "",
-              "syncInterval": 300
+              "syncInterval": 600
           },
           
           "Please note, the existince of the ibeacon key will enable iBeacon support, if iBeacon support is not desired, remove the key": "",
           "ibeacon": {
-              "UUID": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77D"
+              "UUID": "INSERT-IBEACON-UUID-HERE"
           }
       },
     "When the autoInitialize value is set to true it will start user registration immediately, if you want to trigger user registration later at a specific point in your app, set this value to": false,
@@ -111,9 +111,9 @@
   },
   "android": {
     "Please note": "you will need to update your baseUrl to the one supplied to you",
-    "baseUrl": "https://mobile-sdk-lib-us-0.brilliantcollector.com",
+    "baseUrl": "https://mobile-sdk-lib-XX-Y.brilliantcollector.com",
     "appKey": {
-      "prod": "gcnslVYNku"
+      "prod": "INSERT APP KEY HERE"
     },
     "Set this to the google project number if you are using GCM or to an empty string if you are using FCM": "",
     "Use 'gcm' for GCM or 'fcm' for FCM": "",
@@ -162,7 +162,7 @@
       "The sync key is only used to customize the iBeacon and Geofence syncing service, it is not required for those features": "",
       "sync": {
         "Specify how long to wait before syncing again on significant location change in seconds, default 5 minutes":"",
-        "syncInterval": 300,
+        "syncInterval": 600,
         "Location Sync radius is in meters, default 100km":"",
         "syncRadius": 100000,
         "Specify how long to wait before retrieving a new location from the device, default 5 minutes":"",
@@ -177,7 +177,7 @@
       "Please note, unlike iOS, the existence of the ibeacon key does not enable iBeacon support, iBeacon support is enabled only if iBeacons are nearby":"",
       "ibeacon": {
         "Please note: if this is not set, iBeacon events will not be sent": "This value should never be empty. Leave the default value if you don't want to use iBeacons",
-        "uuid": "21A9A7F4-0DD8-46B7-9D4D-379F3C4AF77Dn",
+        "uuid": "YOUR-IBEACONS-UUID",
         "Specify how much time the sdk will scan for iBeacons in every scan session while the application is in the foreground, default is 5 seconds": "",
         "beaconForegroundScanDuration": 5,
         "Specify how much time the sdk will wait between iBeacons scan sessions while the application is in the foreground, default is 30 seconds": "",
